@@ -576,13 +576,12 @@ public class ActionController {
     public static Runnable Monsters() {
         return () -> {
             ArrayList<Card> onTableCards = new ArrayList<>();
-            for (Row row : game.getCurrentPlayer().getRows()) {
-                for (Card card : row.getCards()) {
-                    onTableCards.add(card);
-                }
+            for(Row row : game.getCurrentPlayer().getRows()){
+                onTableCards.addAll(row.getCards());
+
             }
             Collections.shuffle(onTableCards);
-            Card card = onTableCards.get(0);
+            Card card = onTableCards.getFirst();
             game.getCurrentPlayer().getRemainCard().add(card);
         };
     }
